tests/baselines/reference/unicodeEscapesInJsxtags.errors.txt
file.tsx(15,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(16,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(17,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(18,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(19,6): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(20,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(21,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(22,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(23,4): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(26,9): error TS17021: Unicode escape sequence cannot appear here.
file.tsx(27,9): error TS17021: Unicode escape sequence cannot appear here.


==== file.tsx (11 errors) ====
    import * as React from "react";
    declare global {
        namespace JSX {
            interface IntrinsicElements {
                "a-b": any;
                "a-c": any;
            }
        }
    }
    const Compa = (x: {x: number}) => <div>{"" + x}</div>;
    const x = { video: () => null }
    
    // unicode escape sequence is not allowed in tag name or JSX attribute name.
    // tag name:
    ; <\u0061></a>
       ~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <\u0061-b></a-b>
       ~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <a-\u0063></a-c>
       ~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <Comp\u0061 x={12} />
       ~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <x.\u0076ideo />
         ~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <\u{0061}></a>
       ~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <\u{0061}-b></a-b>
       ~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <a-\u{0063}></a-c>
       ~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ; <Comp\u{0061} x={12} />
       ~~~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    
    // attribute name
    ;<video data-\u0076ideo />
            ~~~~~~~~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    ;<video \u0073rc="" />
            ~~~~~~~~
!!! error TS17021: Unicode escape sequence cannot appear here.
    